@@ -1,7 +1,7 @@
 Dear GMT user-
 
 We are pleased to announce the release of GMT version 4.5.2.
-Again, this release fixes a few bugs but also adds some new
+This release mostly fixes several bugs but also adds some new
 functionality, such as a math graph mode and a curved arrow
 symbol in psxy[z].  Finally, we needed to make a small revision
 to the netcdf GSHHS files (2.0.2) to correct a pscoast bug.
